# SP2024

./: CMakeLists.txt  main.cpp
EN/ex10/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp
EN/ex12/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp
EN/ex3/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task7.cpp
EN/ex6/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp
EN/ex7/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp
EN/ex9/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp
MK/ex10/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp
MK/ex12/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad9.cpp
MK/ex13/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp
MK/ex4/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp
MK/ex5/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
MK/ex8/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp
