cmake_minimum_required(VERSION 3.24)
project(SP2024)

set(CMAKE_CXX_STANDARD 17)

#add_executable(SP2024 main.cpp)

add_executable(task1 ./EN/ex9/task1.cpp)
add_executable(task2 ./EN/ex9/task2.cpp)
add_executable(task3 ./EN/ex9/task3.cpp)
add_executable(task4 ./EN/ex9/task4.cpp)
add_executable(task5 ./EN/ex9/task5.cpp)
add_executable(task6 ./EN/ex9/task6.cpp)
add_executable(task7 ./EN/ex6/task7.cpp)

add_executable(zad1 ./MK/ex8/zad1.cpp)
add_executable(zad2 ./MK/ex8/zad2.cpp)
add_executable(zad3 ./MK/ex8/zad3.cpp)
add_executable(zad4 ./MK/ex8/zad4.cpp)
add_executable(zad5 ./MK/ex8/zad5.cpp)
add_executable(zad6 ./MK/ex8/zad6.cpp)
add_executable(zad7 ./MK/ex8/zad7.cpp)
add_executable(zad8 ./MK/ex8/zad8.cpp)
add_executable(zad9 ./MK/ex5/zad9.cpp)

add_executable(main main.cpp)